<?xml version="1.0"?>
<package format="3">
	<name>flex_nav_common</name>
	<version>0.3.1</version>
	<description>

		The flex_nav package is largely based on <a href="https://navigation.ros.org/">navigation2</a>
		meaning that, flex_nav supports the same features, but implements them differently.

	</description>
	<author>Justin Willis</author>
	<author email="joshua.zutell.18@cnu.edu">Joshua Zutell</author>
	<maintainer email="david.conner@cnu.edu">Dr. David Conner</maintainer>
	<license>BSD</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav_msgs</depend>

	<test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
	<test_depend>geometry_msgs</test_depend>
	<test_depend>nav2_core</test_depend>
	<test_depend>nav2_msgs</test_depend>
	<test_depend>rclcpp</test_depend>
	<test_depend>std_msgs</test_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>
