<package>
	<name>flex_nav_controllers</name>
	<version>0.0.1</version>
	<description>

		The flex_nav package is largely based on <a href="http://wiki.ros.org/move_base">move_base</a> meaning that, flex_nav supports the same features, but implements them differently.

	</description>
	<author email="justin.willis.13@cnu.edu">Justin Willis</author>
	<maintainer email="david.conner@cnu.edu">Dr. David Conner</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>flex_nav_common</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_core</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>genmsg</build_depend>
	<build_depend>message_runtime</build_depend>

	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>flex_nav_common</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_core</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

</package>
