<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>flex_nav_planners</name>
	<version>0.3.1</version>
	<description>

		The flex_nav package is largely based on <a href="https://navigation.ros.org/">navigation2</a>
		meaning that, flex_nav supports the same features, but implements them differently.

	</description>
	<author>Justin Willis</author>
	<author email="joshua.zutell.18@cnu.edu">Joshua Zutell</author>
	<maintainer email="david.conner@cnu.edu">Dr. David Conner</maintainer>
	<license>BSD</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>rclpy</depend>

	<depend>flex_nav_common</depend>
	<depend>geometry_msgs</depend>
	<depend>nav2_core</depend>
	<depend>nav2_msgs</depend>
	<depend>nav2_navfn_planner</depend>
	<depend>nav2_util</depend>
	<depend>std_msgs</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>tf2_ros</depend>

	<test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<export>
    	<build_type>ament_cmake</build_type>
  </export>

</package>
