<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flex_nav_pure_pursuit</name>
  <version>1.1.0</version>
  <description>Implements Pure Pursuit algorithm to be used for following a path</description>
  <author>Justin Willis</author>
  <author email="joshua.zutell.18@cnu.edu">Joshua Zutell</author>
  <maintainer email="david.conner@cnu.edu">Dr. David Conner</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>flex_nav_common</depend>
	<depend>geometry_msgs</depend>
	<depend>nav2_core</depend>
	<depend>nav2_msgs</depend>
	<depend>nav2_controller</depend>
	<depend>nav_2d_utils</depend>
	<depend>dwb_core</depend>
	<depend>rclpy</depend>
	<depend>std_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>nav2_costmap_2d</depend>
	<depend>pluginlib</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
